--- a/JavaQuiz/app/src/main/AndroidManifest.xml
+++ b/JavaQuiz/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <meta-data android:name="QUERY_LOG" android:value="true" />
         <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.example" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".View.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
