fixed data related to sugar orm parameters (in AndroidManifest)

--- a/JavaQuiz/app/src/main/AndroidManifest.xml
+++ b/JavaQuiz/app/src/main/AndroidManifest.xml
@@ -10,16 +10,16 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="DATABASE"
-            android:value="sugar_example.db" />
+            android:value="dbTasks.sqlite" />
         <meta-data
             android:name="VERSION"
-            android:value="2" />
+            android:value="1" />
         <meta-data
             android:name="QUERY_LOG"
             android:value="true" />
         <meta-data
             android:name="DOMAIN_PACKAGE_NAME"
-            android:value="com.example" />
+            android:value="com.khasang.javaquiz.javaquiz.Model.data" />
 
         <activity android:name=".View.MainActivity">
             <intent-filter>
