db name is corrected (in AndroidManifest)

--- a/JavaQuiz/app/src/main/AndroidManifest.xml
+++ b/JavaQuiz/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="DATABASE"
-            android:value="dbTasks.sqlite" />
+            android:value="dbQuestions.sqlite" />
         <meta-data
             android:name="VERSION"
             android:value="1" />
